Change connect db to entityframework

--- a/AwareTest/appsettings.Development.json
+++ b/AwareTest/appsettings.Development.json
@@ -10,7 +10,7 @@
   "AppSettings": {
     "Secret": "AAABBBCCC_AAABBBCCC_AAABBBCCC_AAABBBCCC_AAABBBCCC_",
     "ServerName": "LAPTOP-6DBNG835",
-    "DatabaseName": "Northwind"
+    "Database": "Server=LAPTOP-6DBNG835;Database=Northwind;TrustServerCertificate=True;Integrated Security=SSPI;"
   },
   "Logging": {
     "LogLevel": {
