--- a/AwareTest/AwareTest.csproj
+++ b/AwareTest/AwareTest.csproj
@@ -9,7 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.15" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.14" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="4.0.5" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.2.0" />
   </ItemGroup>
@@ -17,8 +17,8 @@
   <ItemGroup>
     <ProjectReference Include="..\AwareTest.Common\AwareTest.Common.csproj" />
     <ProjectReference Include="..\AwareTest.Data\AwareTest.Data.csproj" />
-    <ProjectReference Include="..\AwareTest.Model\AwareTest.Model.csproj" />
-    <ProjectReference Include="..\AwareTest.Services\AwareTest.Services.csproj" />
+    <ProjectReference Include="..\AwareTest.ModelNew\AwareTest.ModelNew.csproj" />
+    <ProjectReference Include="..\AwareTest.ServiceNew\AwareTest.ServiceNew.csproj" />
   </ItemGroup>
 
 </Project>
