--- a/AwareTest/AwareTest.csproj
+++ b/AwareTest/AwareTest.csproj
@@ -16,7 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AwareTest.Common\AwareTest.Common.csproj" />
-    <ProjectReference Include="..\AwareTest.Data\AwareTest.Data.csproj" />
+    <ProjectReference Include="..\AwareTest.DataAccess\AwareTest.DataAccess.csproj" />
     <ProjectReference Include="..\AwareTest.ModelNew\AwareTest.ModelNew.csproj" />
     <ProjectReference Include="..\AwareTest.ServiceNew\AwareTest.ServiceNew.csproj" />
   </ItemGroup>
